@@ -1,3 +1,7 @@
+2006-07-26    <tino@firebird.03.softkill.net>
+
+	* ptybuffer.c (ptybuffer_new_fd, main): history_tail added (option -t)
+
 2006-04-12    <tino@firebird.03.softkill.net>
 
 	* ptybuffer.c (daemonloop): A little typo (wrong cb function) make
